fix planet imagery issue card overlapping

--- a/src/styles/components/_c-card.scss
+++ b/src/styles/components/_c-card.scss
@@ -1,5 +1,5 @@
-$c-card-border-width:   2px;
-$c-card-border-radius:  $global-spacing-1;
+$c-card-border-width: 2px;
+$c-card-border-radius: $global-spacing-1;
 
 .c-card {
   position: relative;
@@ -59,7 +59,8 @@ $c-card-border-radius:  $global-spacing-1;
     }
   }
 
-  &__title, &__text {
+  &__title,
+  &__text {
     color: $neutral-700;
     white-space: nowrap;
     overflow: hidden;
@@ -103,7 +104,8 @@ $c-card-border-radius:  $global-spacing-1;
       z-index: 1;
     }
 
-    &:hover:after, &:focus:after {
+    &:hover:after,
+    &:focus:after {
       border-color: $primary-400;
     }
 
@@ -169,6 +171,7 @@ $c-card-border-radius:  $global-spacing-1;
 }
 
 .c-map-card {
+  z-index: 10;
   padding: 0;
   position: absolute;
   display: flex;
@@ -207,7 +210,8 @@ $c-card-border-radius:  $global-spacing-1;
     padding: 24px $global-spacing-5;
   }
 
-  &__header, &__footer {
+  &__header,
+  &__footer {
     padding: $global-spacing-5;
   }
 
