--- a/src/styles/components/_c-map.scss
+++ b/src/styles/components/_c-map.scss
@@ -82,7 +82,8 @@
     font-size: 14px;
     line-height: 14px;
     position: relative;
-    .mapboxgl-ctrl-geocoder--icon-search, .mapboxgl-ctrl-geocoder--icon-loading {
+    .mapboxgl-ctrl-geocoder--icon-search,
+    .mapboxgl-ctrl-geocoder--icon-loading {
       display: none !important;
     }
 
@@ -136,7 +137,8 @@
   &__panel-input {
     margin-top: $global-spacing-3;
     width: 100%;
-    .c-input__input-wrapper, .c-input__input {
+    .c-input__input-wrapper,
+    .c-input__input {
       width: 100%;
     }
 
@@ -161,7 +163,8 @@
     &:not(:nth-child(1)) {
       border-top: 2px solid $neutral-400;
     }
-    &:hover, &:focus {
+    &:hover,
+    &:focus {
       background-color: $neutral-400;
     }
 
@@ -184,7 +187,8 @@
     }
 
     &:disabled {
-      &.c-map__control-label, img {
+      &.c-map__control-label,
+      img {
         opacity: 0.5;
       }
       cursor: not-allowed;
@@ -195,12 +199,12 @@
     flex: 1 0 auto;
     text-align: center;
   }
-
 }
 
 .c-map-comparison {
   // Overrides for mapbox-gl-comparison
   .mapboxgl-compare {
+    z-index: 11;
     width: 8px;
 
     .compare-swiper-vertical {
